[minor UI adjustment]-[updated product price and added Price edit]

--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -3,7 +3,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Product</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Branch</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -14,32 +14,28 @@
                         <h6 class="m-0 font-weight-bold table-title">Update Branch: </h6>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label">Branch ID: </label>
                                 <input autocomplete="off" id="branchidmodal" name="branchidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label">Branch Name: </label>
-                                <input autocomplete="off" id="branchnamemodal" name="branchnamemodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="branchnamemodal" name="branchnamemodal" placeholder="Enter New Branch Name" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label">TIN: </label>
-                                <input autocomplete="off" id="tinmodal" name="tinmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="tinmodal" name="tinmodal" placeholder="Enter New TIN" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label">Address: </label>
-                                <input autocomplete="off" id="addressmodal" name="addressmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="addressmodal" name="addressmodal" placeholder="Enter New Address" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
-                        </div>
-                        <div class="row justify-content-center">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label">Logo:</label>
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
@@ -51,7 +47,6 @@
                                             accept="image/svg+xml"
                                         />
                                     </div>
-                                    
                                 </div>
                             </div>
                         </div>
