--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -3,51 +3,38 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Update Price</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Product Price</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card">
+                <div class="card ">
                     <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Update Price: </h6>
+                        <h6 class="m-0 font-weight-bold table-title">Update Product Price: </h6>
                     </div>
                     <div class="card-body">
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label">Product Name</label>
-                                <input id="employeeidmodal" name="employeeidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <label class="form-label" for="productidModal">Product ID</label>
+                                <input autocomplete="off" id="productidModal" name="productidModal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="productnameModal">Product Name</label>
+                                <input autocomplete="off" id="productnameModal" name="productnameModal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label">Contact Info</label>
-                                <input id="contactinfomodal" name="contactinfomodal" type="text" class="form-control" placeholder="Enter New Contact info" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                            <div class="col-md-6">
-                                <label class="form-label">Full Name</label>
-                                <input id="fullnamemodal" name="fullnamemodal" type="text" class="form-control" placeholder="Enter Full Name" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                        </div>
-                        <div class="row mb-2 justify-content-center">
-                            <div class="col-md-6">
-                                <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Position" name="positionmodal"
-                                        id="positionmodal" />
-                                    <input autocomplete="off" type="hidden" id="positionmodalID" name="positionmodalID" />
-                                    <div class="input-group-append">
-                                        <span class="input-group-text">Position</span>
-                                    </div>
-                                </div>
-                                <div class="custom-dropdown cdw-tableoption" id="positionmodalDropdown"></div>
+                                <label class="form-label" for="productPriceModal">Update Price</label>
+                                <input autocomplete="off" id="productPriceModal" name="productPriceModal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" id="closeBtn" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-inventory" id="closeBtn" data-dismiss="modal">Close</button>
                 <button type="button" id="updateBtn" class="btn btn-outline-inventory">Update</button>
             </div>
         </div>
@@ -93,14 +80,14 @@
                                                     <input autocomplete="off" type="checkbox" id="productpricecb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
-                                                    <label for="productpricecb">Product Price</label>
+                                                    <label for="productpricecb">ID</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input autocomplete="off" type="checkbox" id="productcodecb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="productcodecb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="productcodecb">Product Code</label>
@@ -110,7 +97,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input autocomplete="off" type="checkbox" id="descriptioncb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="descriptioncb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="descriptioncb">Description</label>
@@ -140,7 +127,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input autocomplete="off" type="checkbox" id="pricecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="pricecb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="pricecb">Price</label>
@@ -243,8 +230,8 @@
             <table class="table table-bordered custom-mobile-table" id="productprice-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th>Product Price Code</th>
-                        <th>Product Code</th>
+                        <th>ID</th>
+                        <th>Product ID</th>
                         <th>Description</th>
                         <th>Barcode</th>
                         <th>Product Image</th>
