[updated purchaseorder UI]-[script incomplete]

--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -74,24 +74,6 @@
                         <div class="row mb-1">
                             <div class="col-md-6 mb-1">
                                 <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Product Name</span>
-                                    </div>
-                                    <input autocomplete="off" id="productname" name="productname" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
-                                </div>
-                            </div>
-                            <div class="col-md-6 mmb">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Description</span>
-                                    </div>
-                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mb-1">
-                            <div class="col-md-6 mb-1">
-                                <div class="input-group">
                                     <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Category" name="category"
                                         id="category" />
                                     <input autocomplete="off" type="hidden" id="categoryID" name="categoryID" />
@@ -113,7 +95,24 @@
                                 </div>
                                 <div class="custom-dropdown cdw-tableoption" id="vendorDropdown"></div>
                             </div>
-
+                        </div>
+                        <div class="row mb-1">
+                            <div class="col-md-6 mb-1">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Product Name</span>
+                                    </div>
+                                    <input autocomplete="off" id="productname" name="productname" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                            <div class="col-md-6 mmb">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Description</span>
+                                    </div>
+                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Product Description" aria-label="fullname" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
                         </div>
                         <div class="row mb-1">
                             <div class="col-md-6 mb-1">
