--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -171,20 +171,11 @@
             <a class="collapse-item" href="/inventorycount">
               <span>Inventory Counts</span>
             </a>
-            <a class="collapse-item" href="/salesinventoryhistory">
-              <span>Sales Inventory History</span>
-            </a>
-            <a class="collapse-item" href="/inventoryhistory">
-              <span>Inventory History</span>
-            </a>
             <a class="collapse-item" href="#">
               <span>Stock Adjustment</span>
             </a>
             <a class="collapse-item" href="/inventoryvaluationreport">
               <span>Valuation Report</span>
-            </a>
-            <a class="collapse-item" href="/systemlogs">
-              <span>System Logs</span>
             </a>
           </div>
         </div>
@@ -239,10 +230,6 @@
               <span>Production Inventory</span>
             </a>
             <a class="collapse-item" href="#">
-              <span>Production history</span>
-            </a>
-
-            <a class="collapse-item" href="#">
               <span>Logs</span>
             </a>
           </div>
@@ -264,6 +251,32 @@
             </a>
             <a class="collapse-item" href="/discount">
               <span>Discount</span>
+            </a>
+          </div>
+        </div>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseHistory"
+          aria-expanded="true" aria-controls="collapseHistory">
+          <i class="fas fa-history"></i>
+          <span class="text-white">History</span>
+        </a>
+        <div id="collapseHistory" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/salesinventoryhistory">
+              <span>Sales Inventory History</span>
+            </a>
+            <a class="collapse-item" href="/inventoryhistory">
+              <span>Inventory History</span>
+            </a>
+            <a class="collapse-item" href="#">
+              <span>Production history</span>
+            </a>
+            <a class="collapse-item" href="/systemlogs">
+              <span>System Logs</span>
             </a>
           </div>
         </div>
