--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -19,9 +19,9 @@
                                 width="100%" cellspacing="10">
                                 <thead class="table-header">
                                     <tr>
-                                        <th class="col-1">Product ID</th>
-                                        <th class="col-3">Order ID</th>
-                                        <th class="col-3">Description</th>
+                                        <th class="col-1">ID</th>
+                                        <th class="col-2">Order ID</th>
+                                        <th class="col-4">Description</th>
                                         <th class="col-2">Quantity</th>
                                         <th class="col-1">Unit Price</th>
                                         <th class="col-2">Total Price</th>
